--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -34,6 +34,12 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
 
+      - name: Inspect APK
+        run: |
+          ls -lh build/app/outputs/flutter-apk/
+          sha256sum build/app/outputs/flutter-apk/app-release.apk
+
+
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
