--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ flutter:
   uses-material-design: true
   assets:
     - .env.development
+    - .env.production
     - assets/images/
     - assets/backgrounds/
     - assets/logos/
