--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,48 +1,88 @@
-name: Build Release APK
+name: Build Android APK (prod)
 
 on:
+  push:
+    tags:
+      - "v*.*.*"
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version number (optional)'
-        required: false
-        default: '1.0.0'
+        description: "Version number (e.g., 1.0.1)"
+        required: true
+        default: "1.0.0"
 
 jobs:
   build-apk:
-    name: Build Android APK
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+      - uses: actions/setup-java@v4
         with:
-          channel: 'stable'
-          cache: false
+          distribution: temurin
+          java-version: "17"
 
-      - name: Verify Flutter & Dart versions
-        run: |
-          flutter --version
-          dart --version
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.38.9"
+          channel: "stable"
+          cache: true
 
-      - name: Get dependencies
+      - name: Pub get
         run: flutter pub get
 
-      - name: Build APK
-        run: flutter build apk --release
+      - name: Tests
+        run: flutter test
 
-      - name: Inspect APK
+      - name: Decode keystore
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          ls -lh build/app/outputs/flutter-apk/
-          sha256sum build/app/outputs/flutter-apk/app-release.apk
+          echo "$KEYSTORE_BASE64" | base64 --decode > android/app/keystore.jks
 
+      - name: Compute version
+        id: ver
+        shell: bash
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            V="${{ github.event.inputs.version }}"
+          else
+            V="${{ github.ref_name }}"
+            V="${V#v}"
+          fi
+          echo "version=$V" >> "$GITHUB_OUTPUT"
+
+      - name: Build APK (release, prod flavor)
+        env:
+          KEYSTORE_FILE: android/app/keystore.jks
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        run: |
+          flutter build apk --release \
+            --flavor prod \
+            --dart-define=ENV=production \
+            --build-name=${{ steps.ver.outputs.version }} \
+            --build-number=${{ github.run_number }}
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+          name: rivio-prod-apk
+          path: build/app/outputs/flutter-apk/app-prod-release.apk
           retention-days: 30
+
+      - name: Attach APK to GitHub Release (draft)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: true
+          generate_release_notes: true
+          files: build/app/outputs/flutter-apk/app-prod-release.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Clean up keystore
+        if: always()
+        run: rm -f android/app/keystore.jks
