--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,45 +3,34 @@ name: Build Android Release
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version number (e.g., 1.0.1)'
+        description: "Version number (e.g., 1.0.1)"
         required: true
-        default: '1.0.0'
+        default: "1.0.0"
 
 jobs:
   build-release:
-    name: Build Android AAB
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Java 17
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: "17"
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+      - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          flutter-version: "3.38.9"
+          channel: "stable"
           cache: true
 
-      - name: Verify Flutter & Dart versions
-        run: |
-          flutter --version
-          dart --version
-
-      - name: Get dependencies
-        run: flutter pub get
-
-      - name: Run tests
-        run: flutter test
+      - run: flutter pub get
+      - run: flutter test
 
       - name: Decode keystore
         env:
@@ -49,31 +38,44 @@ jobs:
         run: |
           echo "$KEYSTORE_BASE64" | base64 --decode > android/app/keystore.jks
 
-      - name: Build Android App Bundle (AAB)
+      - name: Compute version
+        id: ver
+        shell: bash
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            V="${{ github.event.inputs.version }}"
+          else
+            V="${{ github.ref_name }}"
+            V="${V#v}"
+          fi
+          echo "version=$V" >> "$GITHUB_OUTPUT"
+
+      - name: Build Android App Bundle (AAB) - PROD
         env:
-          KEYSTORE_FILE: keystore.jks
+          KEYSTORE_FILE: android/app/keystore.jks
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
           flutter build appbundle --release \
-            --build-name=${{ github.event.inputs.version || github.ref_name }} \
+            --flavor prod \
+            --dart-define=ENV=production \
+            --build-name=${{ steps.ver.outputs.version }} \
             --build-number=${{ github.run_number }}
 
-      - name: Upload AAB artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: rivio-release-aab
-          path: build/app/outputs/bundle/release/app-release.aab
+          name: rivio-prod-aab
+          path: build/app/outputs/bundle/prodRelease/app-prod-release.aab
           retention-days: 30
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+      - name: Create GitHub Release (draft)
         if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
         with:
-          files: build/app/outputs/bundle/release/app-release.aab
           draft: true
           generate_release_notes: true
+          files: build/app/outputs/bundle/prodRelease/app-prod-release.aab
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
