--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -39,7 +39,9 @@ jobs:
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
+          mkdir -p android/app
           echo "$KEYSTORE_BASE64" | base64 --decode > android/app/keystore.jks
+          ls -la android/app/keystore.jks
 
       - name: Compute version
         id: ver
@@ -55,7 +57,7 @@ jobs:
 
       - name: Build APK (release, prod flavor)
         env:
-          KEYSTORE_FILE: android/app/keystore.jks
+          KEYSTORE_FILE: ${{ github.workspace }}/android/app/keystore.jks
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
